css main image fix on mobile product pages

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -398,3 +398,7 @@ slider-component.slider-component-full-width {
 .slider-button--prev:not([disabled]):hover .icon {	
   transform: rotate(90deg) scale(1.1);	
 } */
+
+.product__media-item {
+  width: 100% !important;
+}
